force-app/main/default/objects/Apttus_Config2__RelatedPriceListItem__c/Apttus_Config2__RelatedPriceListItem__c.object-meta.xml
<CustomObject>
    <description>Holds the relationships between price list items</description>
    <label>Related Price List Item</label>
    <nameField>
        <displayFormat>RI-{0000000000}</displayFormat>
        <label>Related Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Price List Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>