force-app/main/default/objects/Apttus_Config2__RelatedPriceListItem__c/fields/Apttus_Config2__RelatedChargeType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedChargeType__c</fullName>
    <description>The related charge type</description>
    <inlineHelpText>The related charge type</inlineHelpText>
    <label>Related Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Price</fullName>
            </value>
            <value>
                <fullName>License Fee</fullName>
            </value>
            <value>
                <fullName>Subscription Fee</fullName>
            </value>
            <value>
                <fullName>Implementation Fee</fullName>
            </value>
            <value>
                <fullName>Installation Fee</fullName>
            </value>
            <value>
                <fullName>Maintenance Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>