force-app/main/default/objects/Apttus_Config2__RelatedPriceListItem__c/fields/Apttus_Config2__RelatedCustomGroupFieldId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedCustomGroupFieldId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the related custom group field. Only applicable for related custom groups.</description>
    <inlineHelpText>ID of the related custom group field. Only applicable for related custom groups.</inlineHelpText>
    <label>Related Custom Group Field</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Apttus_Config2__FormulaField__c.Apttus_Config2__BusinessObject__c</field>
            <operation>equals</operation>
            <value>Apttus_Config2__LineItem__c</value>
        </filterItems>
        <infoMessage>Please select a custom group field</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Apttus_Config2__FormulaField__c</referenceTo>
    <relationshipLabel>Related Price List Items</relationshipLabel>
    <relationshipName>RelatedPriceListItems</relationshipName>
    <type>Lookup</type>
</CustomField>