force-app/main/default/objects/Apttus_Config2__RelatedPriceListItem__c/fields/Apttus_Config2__RelatedProductFamily__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedProductFamily__c</fullName>
    <description>The related product family</description>
    <inlineHelpText>The related product family</inlineHelpText>
    <label>Related Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>