force-app/main/default/objects/Apttus_Config2__RelatedPriceListItem__c/fields/Apttus_Config2__RelatedProductGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedProductGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the related product group</description>
    <inlineHelpText>ID of the related product group</inlineHelpText>
    <label>Related Product Group</label>
    <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
    <relationshipLabel>Related Price List Items</relationshipLabel>
    <relationshipName>RelatedPriceListItems</relationshipName>
    <type>Lookup</type>
</CustomField>