force-app/main/default/objects/Apttus_Config2__RelatedPriceListItem__c/fields/Apttus_Config2__RelatedProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the related product</description>
    <inlineHelpText>ID of the related product</inlineHelpText>
    <label>Related Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Related Price List Items</relationshipLabel>
    <relationshipName>RelatedPriceListItems</relationshipName>
    <type>Lookup</type>
</CustomField>