force-app/main/default/objects/Apttus_Config2__RelatedPriceListItem__c/fields/Apttus_Config2__RelationType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelationType__c</fullName>
    <description>The relation type</description>
    <label>Relation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Related Price</fullName>
                <default>true</default>
                <label>Related Price</label>
            </value>
            <value>
                <fullName>Related Quantity</fullName>
            </value>
            <value>
                <fullName>Related Attribute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>